feat: add get game status route
